[gd_scene load_steps=74 format=3 uid="uid://dt0ofdci4w48"]

[ext_resource type="Texture2D" uid="uid://b0ypyumppa2po" path="res://resources/Character/Attack-01/Attack-01-Sheet.png" id="1_hqtel"]
[ext_resource type="Script" uid="uid://ch2uupd2tqbf4" path="res://player.gd" id="1_sweqy"]
[ext_resource type="AudioStream" uid="uid://dv6w8o75p2fcb" path="res://resources/sfx/Steps_carpet-003.ogg" id="2_bwjto"]
[ext_resource type="Texture2D" uid="uid://bx2vqa2uiq32p" path="res://resources/Character/Jumlp-All/Jump-All-Sheet.png" id="2_sweqy"]
[ext_resource type="Texture2D" uid="uid://duhruwasvfo6m" path="res://resources/Character/Idle/Idle-Sheet.png" id="3_2hs0m"]
[ext_resource type="Script" uid="uid://1bstu2g48eli" path="res://jump_sound_player.gd" id="3_606se"]
[ext_resource type="Texture2D" uid="uid://cioqewdd7l4jy" path="res://resources/Character/Run/Run-Sheet.png" id="4_1jxqw"]
[ext_resource type="Script" uid="uid://c3yhiacb06ywg" path="res://scripts/animated_sprite_2d.gd" id="6_2hs0m"]
[ext_resource type="Script" uid="uid://dk0d3u8pqrrfy" path="res://fall_timer.gd" id="7_1jxqw"]
[ext_resource type="Texture2D" uid="uid://yrx1t4tiagbr" path="res://resources/Character/Jump-All-Sheet.png" id="8_2wuci"]
[ext_resource type="Script" uid="uid://dbxx0nfgaitoe" path="res://attack_timer.gd" id="8_dw050"]
[ext_resource type="Script" uid="uid://ekdq4kx18wwk" path="res://sword.gd" id="9_b26j0"]
[ext_resource type="PackedScene" uid="uid://3oax7jqdax58" path="res://scenes/health_node.tscn" id="10_n7ghd"]
[ext_resource type="AudioStream" uid="uid://cgwinnwevrkj" path="res://resources/sfx/Steps_carpet-008.ogg" id="11_ivps1"]
[ext_resource type="Script" uid="uid://gsod8pbj04ar" path="res://audio_stream_player.gd" id="12_ivps1"]
[ext_resource type="AudioStream" uid="uid://d170vn6lvaq5e" path="res://resources/sfx/Swoosh Attack3.mp3" id="15_q13i1"]
[ext_resource type="Script" uid="uid://crsohxxae0516" path="res://attack_1_player.gd" id="16_pylmc"]
[ext_resource type="AudioStream" uid="uid://7c7g14ptflye" path="res://resources/sfx/Swoosh Attack4.mp3" id="17_pbfsw"]
[ext_resource type="Script" uid="uid://dw45gx11jywii" path="res://attack_2_player.gd" id="18_5tmop"]
[ext_resource type="AudioStream" uid="uid://71c2xgxjhgta" path="res://resources/sfx/Swoosh Attack2.mp3" id="19_pbfsw"]
[ext_resource type="AudioStream" uid="uid://404rvl31ayvf" path="res://resources/sfx/SFX- Vox-Female-10.wav" id="19_qtqh7"]
[ext_resource type="Script" uid="uid://6glcxbr5w5xp" path="res://attack_3_grunt.gd" id="20_2wuci"]
[ext_resource type="Script" uid="uid://bvw5lvhosnths" path="res://attack_3_player.gd" id="20_5tmop"]
[ext_resource type="Script" uid="uid://dhwmh5a773k3g" path="res://cpu_particles_2d.gd" id="21_5tmop"]
[ext_resource type="AudioStream" uid="uid://wcxukndjgmlg" path="res://resources/sfx/SFX- Vox-Female-02.wav" id="21_dx0e4"]
[ext_resource type="Script" uid="uid://c2hghgqvthre3" path="res://jump_1_player.gd" id="22_jm5j8"]
[ext_resource type="AudioStream" uid="uid://c8tydkhsg80hk" path="res://resources/sfx/SFX- Vox-Female-01.wav" id="23_7hik5"]
[ext_resource type="Script" uid="uid://bnncukakwvo43" path="res://jump_2_player.gd" id="24_jm5j8"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dw050"]
height = 48.0

[sub_resource type="AtlasTexture" id="AtlasTexture_sweqy"]
atlas = ExtResource("1_hqtel")
region = Rect2(0, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hs0m"]
atlas = ExtResource("1_hqtel")
region = Rect2(96, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jxqw"]
atlas = ExtResource("1_hqtel")
region = Rect2(192, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dw050"]
atlas = ExtResource("1_hqtel")
region = Rect2(288, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26j0"]
atlas = ExtResource("1_hqtel")
region = Rect2(384, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7ghd"]
atlas = ExtResource("1_hqtel")
region = Rect2(480, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvl01"]
atlas = ExtResource("1_hqtel")
region = Rect2(576, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivps1"]
atlas = ExtResource("1_hqtel")
region = Rect2(672, 0, 96, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_op7ga"]
atlas = ExtResource("2_sweqy")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q13i1"]
atlas = ExtResource("2_sweqy")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pylmc"]
atlas = ExtResource("2_sweqy")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbfsw"]
atlas = ExtResource("2_sweqy")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tmop"]
atlas = ExtResource("2_sweqy")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ahtn"]
atlas = ExtResource("2_sweqy")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lmhl"]
atlas = ExtResource("2_sweqy")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dx0e4"]
atlas = ExtResource("2_sweqy")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jm5j8"]
atlas = ExtResource("3_2hs0m")
region = Rect2(0, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_7hik5"]
atlas = ExtResource("3_2hs0m")
region = Rect2(64, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtqh7"]
atlas = ExtResource("3_2hs0m")
region = Rect2(128, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wuci"]
atlas = ExtResource("3_2hs0m")
region = Rect2(192, 0, 64, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_iruf7"]
atlas = ExtResource("2_sweqy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5n4i"]
atlas = ExtResource("2_sweqy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_634y6"]
atlas = ExtResource("2_sweqy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_efrwb"]
atlas = ExtResource("2_sweqy")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hiqhm"]
atlas = ExtResource("2_sweqy")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwlq"]
atlas = ExtResource("2_sweqy")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hl5qd"]
atlas = ExtResource("2_sweqy")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ek41f"]
atlas = ExtResource("4_1jxqw")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_khis8"]
atlas = ExtResource("4_1jxqw")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_b88wv"]
atlas = ExtResource("4_1jxqw")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgbbb"]
atlas = ExtResource("4_1jxqw")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_331ug"]
atlas = ExtResource("4_1jxqw")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ny14h"]
atlas = ExtResource("4_1jxqw")
region = Rect2(400, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_ibah8"]
atlas = ExtResource("4_1jxqw")
region = Rect2(480, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_3iwfv"]
atlas = ExtResource("4_1jxqw")
region = Rect2(560, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_qwsg1"]
atlas = ExtResource("8_2wuci")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xqrm"]
atlas = ExtResource("8_2wuci")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfour"]
atlas = ExtResource("8_2wuci")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gr2b"]
atlas = ExtResource("8_2wuci")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl8ci"]
atlas = ExtResource("8_2wuci")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ieltc"]
atlas = ExtResource("8_2wuci")
region = Rect2(768, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qwsg1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sweqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hs0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jxqw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw050")
}],
"loop": false,
"name": &"Attack1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26j0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7ghd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvl01")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivps1")
}],
"loop": false,
"name": &"Attack2",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_op7ga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q13i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pylmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbfsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tmop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ahtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lmhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dx0e4")
}],
"loop": false,
"name": &"Fall",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jm5j8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hik5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtqh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wuci")
}],
"loop": true,
"name": &"Idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iruf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5n4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_634y6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efrwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hiqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hl5qd")
}],
"loop": false,
"name": &"Jump",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ek41f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_khis8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b88wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgbbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_331ug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ny14h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ibah8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3iwfv")
}],
"loop": true,
"name": &"Run",
"speed": 16.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qwsg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xqrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfour")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl8ci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ieltc")
}],
"loop": false,
"name": &"Stomp",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qtqh7"]
size = Vector2(22.5, 63)

[sub_resource type="Gradient" id="Gradient_5tmop"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 15
script = ExtResource("1_sweqy")
MAX_COMBO_ATTACKS = 3

[node name="JumpSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_bwjto")
script = ExtResource("3_606se")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("CapsuleShape2D_dw050")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qwsg1")
animation = &"Stomp"
frame = 5
frame_progress = 1.0
script = ExtResource("6_2hs0m")

[node name="FallTimer" type="Timer" parent="."]
wait_time = 0.258
one_shot = true
script = ExtResource("7_1jxqw")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
script = ExtResource("8_dw050")

[node name="Sword" type="Area2D" parent="."]
collision_layer = 14
collision_mask = 14
script = ExtResource("9_b26j0")
push_force = 1500.0

[node name="swordCollisionShape" type="CollisionShape2D" parent="Sword"]
position = Vector2(28.75, -7.5)
shape = SubResource("RectangleShape2D_qtqh7")
debug_color = Color(0.996448, 0, 0.1196, 0.486275)

[node name="HealthNode" parent="." instance=ExtResource("10_n7ghd")]

[node name="FootStepsPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_ivps1")
playback_type = 1
script = ExtResource("12_ivps1")

[node name="Attack1Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_q13i1")
bus = &"Attacks"
script = ExtResource("16_pylmc")

[node name="Attack2Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_pbfsw")
bus = &"Attacks"
script = ExtResource("18_5tmop")

[node name="AttackGrunts" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_qtqh7")
volume_db = -30.288
script = ExtResource("20_2wuci")

[node name="Attack3Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_pbfsw")
bus = &"Attacks"
script = ExtResource("20_5tmop")

[node name="Jump1Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_dx0e4")
volume_db = -25.0
script = ExtResource("22_jm5j8")

[node name="Jump2Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("23_7hik5")
volume_db = -25.0
script = ExtResource("24_jm5j8")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(3, 21)
emitting = false
amount = 20
lifetime = 0.22
one_shot = true
explosiveness = 0.95
emission_shape = 1
emission_sphere_radius = 9.35
direction = Vector2(0, -0.365)
initial_velocity_min = 66.66
initial_velocity_max = 72.72
scale_amount_min = 0.5
scale_amount_max = 2.0
color_ramp = SubResource("Gradient_5tmop")
script = ExtResource("21_5tmop")

[connection signal="attack" from="." to="AnimatedSprite2D" method="_on_player_attack"]
[connection signal="attack" from="." to="AttackTimer" method="_on_player_attack"]
[connection signal="attack" from="." to="Attack1Player" method="_on_player_attack"]
[connection signal="attack" from="." to="Attack2Player" method="_on_player_attack"]
[connection signal="attack" from="." to="Attack3Player" method="_on_player_attack"]
[connection signal="attack" from="." to="AttackGrunts" method="_on_player_attack"]
[connection signal="direction_changed" from="." to="AnimatedSprite2D" method="_on_character_body_2d_direction_changed"]
[connection signal="direction_changed" from="." to="Sword" method="_on_player_direction_changed"]
[connection signal="jump" from="." to="JumpSoundPlayer" method="_on_player_jump"]
[connection signal="jump" from="." to="Jump2Player" method="_on_player_jump"]
[connection signal="jump" from="." to="Jump1Player" method="_on_player_jump"]
[connection signal="state_changed" from="." to="AnimatedSprite2D" method="_on_character_body_2d_state_changed"]
[connection signal="state_changed" from="." to="FallTimer" method="_on_character_body_2d_state_changed"]
[connection signal="state_changed" from="." to="FootStepsPlayer" method="_on_player_state_changed"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_frame_changed"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="CPUParticles2D" method="_on_animated_sprite_2d_frame_changed"]
[connection signal="timeout" from="FallTimer" to="FallTimer" method="_on_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="AttackTimer" method="_on_timeout"]
[connection signal="body_entered" from="Sword" to="Sword" method="_on_body_entered"]
